crates/rolldown/tests/rolldown/errors/require_tla/main.js
const tla = require('./tla.js');
console.log(tla);
